# pastis

./: .buildinfo  .gitignore  .travis.yml  CITATION  CONTRIBUTORS  COPYING  MANIFEST.in  Makefile  README.rst  documentation.html  environment.yml  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  tutorial.html
.binder/: requirements.txt
.github/workflows/: build-html-and-deploy.yml  main.yml  test.yml
_downloads/0215a1afdb0ef20f99103fba622d1c72/: plot_structures_different_filtering.ipynb
_downloads/07f7a136b867c7cc498e463dd680d615/: plot_inferred_structure.py
_downloads/2988b56dd257c7cc733e46c921b5e4da/: plot_dispersion.py
_downloads/53291e92dbe8aa3af5330ea405d908a3/: plot_inferred_structure.ipynb
_sources/: documentation.rst.txt  sg_execution_times.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  sg_execution_times.html
build_tools/: show-python-packages-versions.py
continuous_integration/: after_success.sh  install.sh  test_script.sh
doc/: .gitignore  Makefile  advanced.rst  api.rst  conf.py  constraints.rst  data.rst  diploidy.rst  documentation.rst  index.rst  install.rst  installation.rst  make.bat  multiscale.rst  tutorial.rst  whats_new.rst
doc_old/: documentation.rst  index.rst  install.rst
example/: README  config.ini
examples/: .gitignore  README.txt  plot_generate_data.py
modules/: classes.html
pastis/: __init__.py  algorithms.py  config.py  diploid_algorithms.py  fastio.py  io.py  poisson_model_power_law.py  setup.py
pastis/io/: __init__.py  (+4 more)
(+175 files in other folders)
